TEST_PROGRAMS/VALID/david_zhou/valid2.min
# compute the nth root of a number

var x: float;
var guess: float;
var quot: float;
var inv: float;
var iter: int;
var n: int;

print "Enter number ";
read x;
print "Enter n ";
read n;
guess = 1;
iter = 20;
inv = 1 / n;

if 1 - n then
  while iter do
    quot = x / guess;
    guess = inv * ((n - 1) * guess + quot);
    iter = iter - 1;
  done
else
  guess = x;
endif

print "nth root of the input is ";
print guess;

