TEST_PROGRAMS/INVALID/AMIEL_KOLLEK/bad_control_flow.min
# this invalid program has a missing end if, an invalid expression in the if statement, and a missing for the while loop

var x: int;
var y: float;


x = 10;

y = 1;

if x then
    y = y*2;

#missing endif

while x # missing do
    x = x - 1;
done

if then # mising expr
    print y;
endif

